refacto and fix order